--- a/src/index.css
+++ b/src/index.css
@@ -66,8 +66,8 @@
     --secondary-foreground: 220.9 39.3% 11%;
     --muted: 220 14.3% 95.9%;
     --muted-foreground: 220 8.9% 46.1%;
-    --accent: 220 14.3% 95.9%;
-    --accent-foreground: 220.9 39.3% 11%;
+    --accent: 200 86.7% 61.8%;
+    --accent-foreground: 210 20% 98%;
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 210 20% 98%;
     --border: 220 13% 91%;
@@ -118,5 +118,9 @@
 
   body {
     @apply bg-background text-foreground;
+  }
+
+  .navLinks {
+    @apply p-1.5 rounded-full size-8 hover:bg-secondary
   }
 }
