--- a/src/index.css
+++ b/src/index.css
@@ -121,6 +121,6 @@
   }
 
   .navLinks {
-    @apply p-1.5 rounded-full size-8 hover:bg-secondary
+    @apply p-1.5 rounded-full size-8 hover:bg-secondary text-neutral-500
   }
 }
