--- a/src/index.css
+++ b/src/index.css
@@ -123,4 +123,21 @@
   .navLinks {
     @apply p-1.5 rounded-full size-8 hover:bg-secondary text-neutral-500
   }
+
+
+  .tiptap p.is-editor-empty:first-child::before {
+    color: #adb5bd;
+    content: attr(data-placeholder);
+    float: left;
+    height: 0;
+    pointer-events: none;
+  }
+
+  .tiptap p.is-empty::before {
+    color: #adb5bd;
+    content: attr(data-placeholder);
+    float: left;
+    height: 0;
+    pointer-events: none;
+  }
 }
